z-index correction for search dropdown

--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -52,7 +52,7 @@
 
 .search-container {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 .search-dropdown-container {
